made changes so that demo section has button, nearly finished

--- a/index.html
+++ b/index.html
@@ -27,42 +27,18 @@
     <div class="row">
         <div class="jumbotron">
             <h1>Interactive Learning for Hierarchies of Concepts</h1>
-            <p>Answering the question, our system forms the hierarchy of concepts steps by steps. In every iteration, the system will throw the actively most informative question based on current hierarchy.</p>
-            <p></p>
-            <p>Based on prevous work, we focus on solving these problems</p>
-            <ol>
-                <li>
-                    <a>Help user to track the change of tree easily</a>
-                </li>
-                <li>
-                    <a>Visualie the hidden edge to provide information when user answers the question</a>
-                </li>
-                <li>
-                    <a>Visualize how user's answer is influencial for mahcine learning algorithm to build the hierarchy of concepts</a>
-                </li>
-            </ol>
-            <p>For reference,
-            </p>
+            <p>We built a visualization system for a crowdsourcing algorithm which learns hierarchies of concepts.</p>
             <ul>
-                <li>
-                    <a href="https://www.cs.washington.edu/node/12083">Building Hierarchies of Concepts via Crowdsourcing</a>
-                </li>
-                <li>
-                    <a href="https://www.youtube.com/watch?list=PLMdjyI1iH4ysIWKv82RfdD7nF5a_BQ0l6&v=53B192f332U">Video Shows the MAP Tree</a>
-                </li>
+            <li><a href="https://www.cs.washington.edu/node/12083">Building Hierarchies of Concepts via Crowdsourcing</a></li>
             </ul>
-            <p><a class="btn btn-primary btn-lg" role="button" id="startBTN">Let's build the tree »</a>
-            </p>
+            <p>The system learns by obtaining answers to simple questions such as "Is <b>orange</b> a type of <b>citrus fruit</b>?".</p>
+            <p>Hierarchies are represented by trees, where a node is considered a subclass of all its ancestors.</p>
+            <p>Given the responses, a probabilistic model defines a distribution over possible hierarchies, but the algorithm only returns the <em>maximum a posteriori</em> (MAP) tree, which may not represent the entire distribution due to uncertainty and sampling error.</p>
+            <button class="btn btn-primary btn-lg" role="button" id="demoBTN">Go to Demo</button>
         </div>
     </div>
 
-    <div class="arrange-vertically" id="timeline">
-        <!-- Display the current trees -->
-        <div class="row" id="viz">
-            <div class="block" id="chart1"></div>
-            <div class="block" id="chart2"></div>
-        </div>
-    </div>
+    <div class="arrange-vertically" id="timeline"></div>
 </div>    
 
 <script src="main.js" type="text/javascript"></script>
