quick tweak to demo explanation

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <p>The system learns by obtaining answers to simple questions such as "Is <b>orange</b> a type of <b>citrus fruit</b>?".</p>
             <p>Hierarchies are represented by trees, where a node is considered a subclass of all its ancestors.</p>
             <p>Given the responses, a probabilistic model defines a distribution over possible hierarchies, but the algorithm only returns the <em>maximum a posteriori</em> (MAP) tree, which may not represent the entire distribution due to uncertainty and sampling error.</p>
+            <p>Before running the algorithm interactively, click the button below to see a demonstration of our visualization tool on pre-trained hierarchy</p>
             <button class="btn btn-primary btn-lg" role="button" id="demoBTN">Go to Demo</button>
         </div>
     </div>
