add some stuff to final, tweak the demo slightly

--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
     <div class="row">
         <div class="jumbotron">
             <h1>Interactive Learning for Hierarchies of Concepts</h1>
-            <p>We built a visualization system for a crowdsourcing algorithm which learns hierarchies of concepts.</p>
+            <p>We built a visualization system for an algorithm which learns hierarchies of concepts by crowdsourcing answers to simple questions such as "Is <b>orange</b> a type of <b>citrus fruit</b>?".</p>
             <ul>
             <li><a href="https://www.cs.washington.edu/node/12083">Building Hierarchies of Concepts via Crowdsourcing</a></li>
             </ul>
-            <p>The system learns by obtaining answers to simple questions such as "Is <b>orange</b> a type of <b>citrus fruit</b>?".</p>
-            <p>Hierarchies are represented by trees, where a node is considered a subclass of all its ancestors.</p>
-            <p>Given the responses, a probabilistic model defines a distribution over possible hierarchies, but the algorithm only returns the <em>maximum a posteriori</em> (MAP) tree, which may not represent the entire distribution due to uncertainty and sampling error.</p>
-            <p>Before running the algorithm interactively, click the button below to see a demonstration of our visualization tool on pre-trained hierarchy</p>
+            <p>Before running the algorithm interactively, click the button below to see a demonstration of our visualization tool on pre-trained hierarchy.</p>
             <button class="btn btn-primary btn-lg" role="button" id="demoBTN">Go to Demo</button>
         </div>
     </div>
