--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <ul>
             <li><a href="https://www.cs.washington.edu/node/12083">Building Hierarchies of Concepts via Crowdsourcing</a></li>
             </ul>
-            <p>Before running the algorithm interactively, click the button below to see a demonstration of our visualization tool on pre-trained hierarchy.</p>
+            <p>Before running the algorithm interactively, click the button below to see a demonstration of our visualization tool on a pre-trained hierarchy.</p>
             <button class="btn btn-primary btn-lg" role="button" id="demoBTN">Go to Demo</button>
         </div>
     </div>
